feat: #57 add getReservationsByMember feature