@@ -5,15 +5,18 @@ import io.nbc.selectedseat.domain.artist.service.ArtistService;
 import io.nbc.selectedseat.domain.concert.model.Concert;
 import io.nbc.selectedseat.domain.concert.service.query.ConcertReader;
 import io.nbc.selectedseat.domain.member.facade.dto.FollowArtistsInfo;
+import io.nbc.selectedseat.domain.member.facade.dto.ReservationDetailInfo;
 import io.nbc.selectedseat.domain.member.facade.dto.TicketDetailInfo;
 import io.nbc.selectedseat.domain.member.service.FollowService;
 import io.nbc.selectedseat.domain.reservation.model.Reservation;
 import io.nbc.selectedseat.domain.reservation.service.query.ReservationReader;
 import io.nbc.selectedseat.domain.ticket.model.TicketAndPrice;
+import io.nbc.selectedseat.domain.ticket.model.TicketPrice;
+import io.nbc.selectedseat.domain.ticket.service.query.TicketPriceReader;
 import io.nbc.selectedseat.domain.ticket.service.query.TicketReader;
-import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.function.Function;
 import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
@@ -28,6 +31,7 @@ public class MemberFacade {
     private final ArtistService artistService;
     private final ReservationReader reservationReader;
     private final TicketReader ticketReader;
+    private final TicketPriceReader ticketPriceReader;
     private final ConcertReader concertReader;
 
     @Transactional(readOnly = true)
@@ -57,15 +61,45 @@ public class MemberFacade {
 
         List<Concert> concerts = concertReader.getConcertsByConcertIds(concertIds);
 
-        Map<Long, Concert> concertMap = new HashMap<>();
-        for (Concert concert : concerts) {
-            concertMap.put(concert.getConcertId(), concert);
-        }
+        Map<Long, Concert> concertMap = concerts.stream()
+            .collect(Collectors.toMap(Concert::getConcertId, Function.identity()));
 
         return ticketAndPrices.stream()
             .map(ticketAndPrice -> TicketDetailInfo.from(
                 ticketAndPrice,
                 concertMap.get(ticketAndPrice.getConcertId())))
-            .collect(Collectors.toList());
+            .toList();
+    }
+
+    @Transactional(readOnly = true)
+    public List<ReservationDetailInfo> getReservationsByMemberId(final Long memberId) {
+        List<Reservation> reservations = reservationReader.getReservationByMemberId(
+            memberId);
+
+        List<Long> ticketPriceIds = reservations.stream()
+            .map(Reservation::getTicketPriceId)
+            .toList();
+
+        List<TicketPrice> ticketPrices = ticketPriceReader.getTicketPricesByIds(
+            ticketPriceIds);
+
+        Map<Long, TicketPrice> ticketPriceMap = ticketPrices.stream()
+            .collect(Collectors.toMap(TicketPrice::getTicketPriceId, Function.identity()));
+
+        List<Long> concertIds = reservations.stream()
+            .map(Reservation::getConcertId)
+            .toList();
+
+        List<Concert> concerts = concertReader.getConcertsByConcertIds(concertIds);
+
+        Map<Long, Concert> concertMap = concerts.stream()
+            .collect(Collectors.toMap(Concert::getConcertId, Function.identity()));
+
+        return reservations.stream()
+            .map(reservation -> ReservationDetailInfo.from(
+                reservation,
+                ticketPriceMap.get(reservation.getTicketPriceId()),
+                concertMap.get(reservation.getConcertId())))
+            .toList();
     }
 }
